--- a/assets/stylesheets/landing-page/layout/footer.scss
+++ b/assets/stylesheets/landing-page/layout/footer.scss
@@ -1,7 +1,7 @@
 /* Footer
    ========================================================================== */
 footer {
-  background: $footer-background;
+  background: $footer-bg;
   bottom: 0px;
   color: $footer-text-color;
   font-size: $footer-font-size;
