--- a/views/pages/extended.pug
+++ b/views/pages/extended.pug
@@ -35,12 +35,12 @@ block content
   .bottom-container
     p  Didn"t find what you were looking for?
     div
-      a.btn(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
+      a.button(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
   footer
     .container
-      | Download from gitlab at 
+      | Download from gitlab at
       a(href='https://gitlab.com/SUSE-UIUX/eos-icons') EOS icons
       | .
-      |         Thanks to 
+      |         Thanks to
       a(href='https://github.com/sapegin/grunt-webfont') grunt-webfont
       | .
