--- a/assets/stylesheets/landing-page/base/pages/landing.scss
+++ b/assets/stylesheets/landing-page/base/pages/landing.scss
@@ -1,7 +1,9 @@
 $nav-font-size: 2rem;
 $nav-item-font-size: 2rem;
 $nav-top-gradient: linear-gradient(90deg, #FBB369, #FF814A);
-$header-background:  url(../images/landing/header.png) linear-gradient(90deg, #FBB369, #FF814A) cover;
-$footer-background: url(../images/landing/footer.png) linear-gradient(90deg, #66667A, #2F2F3B) cover;
+$header-background: url(../images/landing/header.png),
+linear-gradient(90deg, #FBB369, #FF814A);
+$footer-background: url(../images/landing/footer.png),
+linear-gradient(90deg, #66667A, #2F2F3B);
 $icon-item-hover-color: #fe673a;
 $icon-item-font-size: 48px;
