--- a/assets/stylesheets/landing-page/base/titles.scss
+++ b/assets/stylesheets/landing-page/base/titles.scss
@@ -6,7 +6,6 @@ footer {
 }
 
 h1 {
-  color: $h1-font-color;
   font-size: $h1-font-size;
   margin: 0;
 }
@@ -15,6 +14,7 @@ h2 small {
   font-size: $h2-small-font-size;
 }
 
-h3 {
-  text-align: center;
+h4 {
+  font-size: $h4-font-size;
+  line-height: 1.5em;
 }
