--- a/assets/stylesheets/landing-page/base/variables/titles.scss
+++ b/assets/stylesheets/landing-page/base/variables/titles.scss
@@ -2,3 +2,4 @@ $font-family: 'Lato', sans-serif;
 $h1-font-size: 32px;
 $h1-font-color: $light-color;
 $h2-small-font-size: 0.5em;
+$h4-font-size: 1.3em;
