--- a/assets/stylesheets/landing-page/landing.scss
+++ b/assets/stylesheets/landing-page/landing.scss
@@ -1,6 +1,5 @@
 /* Navbar
-  ========================================================================== */
-
+   ========================================================================== */
 .navbar-brand {
   font-size: $nav-font-size;
 
@@ -15,7 +14,8 @@
 
 .header {
   background: $header-background;
-  height: 547px;
+  background-size: cover;
+  height: 500px;
   width: 100%;
 }
 
@@ -33,9 +33,8 @@
 */
 
 .content {
-  padding-top: 13%;
+  padding-top: 15rem;
   text-align: center;
-  text-shadow: 0px 4px 3px #FF814A, 0px 8px 13px #FF814A, 0px 18px 23px #FF814A;
 }
 
 .pull-right {
@@ -71,17 +70,18 @@ div.fixed-rectangle-inverse {
 }
 
 .plane-img {
-  height: 300px;
-  max-width: 100%;
+  display: inline;
+  height: auto;
+  max-height: 300px;
 }
 
 
 /* Template styles and buttons
-  ========================================================================== */
+   ========================================================================== */
+body {
+  font-family: $font-family;
+ }
 
-// body {
-//  font-family: Lato;
-// }
 .btn {
   border-radius: 30px 30px 30px 30px;
   border-width: 1.39px;
@@ -93,9 +93,71 @@ div.fixed-rectangle-inverse {
 
 .footer {
   background: $footer-background;
-  height: 440px;
-  width: 100%;
+  background-size: cover;
+  height: auto;
+  margin-bottom: 53px;
+  max-width: 100%;
+  padding-top: 20px;
 }
+
+/* bottom-links
+   ========================================================================== */
+/* Bottom-links variables
+   ========================================================================== */
+/* Landing page components: bottom-links
+   ========================================================================== */
+/* Variables file: assets/stylesheets/landing-page/components/bottom-links/bottom-links.variables.scss */
+.bottom-links-items {
+  margin: 24px 0 16px 0;
+  }
+
+.bottom-links-items > div {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 24px;
+  }
+
+.bottom-links-items > div .btn {
+  align-self: center;
+  margin-top: auto;
+  }
+
+.bottom-links-icon {
+  height: 18px;
+  margin-right: 8px;
+  }
+
+.btn-group-footer {
+  display: flex;
+  justify-content: space-between;
+  }
+
+@media screen and (max-width: 768px) {
+  .btn-group-footer {
+    display: flex;
+    justify-content: center;
+    }
+  }
+
+@media screen and (max-width: 1336px) {
+  .btn-group-footer {
+    justify-content: space-around;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+  .bottom-group {
+    display: inline-block;
+    width: 100%;
+    }
+  }
+
+@media screen and (max-width: 1336px) {
+  .bottom-group {
+    display: inline-block;
+    width: 100%;
+    }
+  }
 
 .panel-footer {
   margin: 1;
