--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -40,4 +40,4 @@ block content
   .bottom-container
     p  Didn't find what you were looking for?
     div
-      a.btn(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
+      a.button(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
