--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -12,6 +12,7 @@ html
     link(rel='stylesheet', href='./assets/css/application.css')
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js', integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1', crossorigin='anonymous')
   body
     include ../shared/layout/header.pug
     block content
