--- a/views/pages/landing.pug
+++ b/views/pages/landing.pug
@@ -103,7 +103,7 @@ block content
         button.btn.btn-dark.btn-lg.d-flex.mx-auto.mt-lg-4.mb-lg-3.mb-sm-3(type='button') Check out Extended EOS Icons
     // Cheatsheet and new icons request ---------------------------------------------------------------
     .card-group
-      .card.bg-cheatsheet.bottom-group
+      .card.bg-cheatsheet
         .card-body.bottom-group
           .d-inline-block.align-top.pt-lg-5.pr-lg-3
             img.d-inline.pl-lg-5(src='assets/images/landing/rocket1.png', alt='img-responsive')
@@ -116,7 +116,7 @@ block content
               br
               |                advices for you.
             button.btn.btn-outline-light.btn-lg.ml-lg-5.mt-lg-1(type='button') Check out Cheatsheet
-      .card.bg-request.bottom-group
+      .card.bg-request
         .card-body.bottom-group
           .d-inline-block.align-top.pt-lg-5.pr-lg-3
             img.d-inline.pl-lg-5(src='assets/images/landing/rocket2.png', alt='img-responsive')
@@ -130,12 +130,12 @@ block content
               |                and include them in EOS icons.
             button.btn.btn-outline-light.btn-lg.ml-lg-5.mt-lg-1(type='button') Request new icons
     // Checkout EOS DS --------------------------------------------------------------------------------
-    .container-fluid.top-gradient.text-white.text-center.plane-container
+    .container-fluid.top-gradient.text-white.text-center.bottom-container
       .d-inline-block.text-left.ml-lg-5.pl-lg-5.mt-sm-4
         h1 Try EOS Icons with EOS DS
         h4 We are a part of EOS Design system and together we work like a charm
       .d-inline-block.text-center
-        button.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5(type='button') Check out EOS DS
+        button.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5.mt-sm-3(type='button') Check out EOS DS
       .col.d-inline.ml-lg-5
         img.d-inline-block.plane-img(src='assets/images/landing/plane.png', alt='img-responsive')
     // Contributors section ---------------------------------------------------------------------------
@@ -195,4 +195,3 @@ block content
             | Get the latest news, meet the team, and more.
           a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
             | EOS in Twitter
-          script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js', integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1', crossorigin='anonymous')
