--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -7,13 +7,11 @@ nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top
     span.navbar-toggler-icon
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.text-white.ml-auto
-      li.nav-item.active
-        a.nav-link.border-bottom(href='landing.html')
-          | Home
-          span.sr-only (current)
       li.nav-item
-        a.nav-link(href='/') Cheatsheet
+        a.nav-link.current(href='landing.html') Home
       li.nav-item
-        a.nav-link(href='icons-picker.html') Customize it
+        a.nav-link.current(href='index.html') Cheatsheet
       li.nav-item
-        a.nav-link(href='/') Features
+        a.nav-link.current(href='icons-picker.html') Customize it
+      li.nav-item
+        a.nav-link.current(href='/') Features
