--- a/assets/stylesheets/landing-page/layout/header.scss
+++ b/assets/stylesheets/landing-page/layout/header.scss
@@ -8,6 +8,11 @@ header {
   width: 100%;
 }
 
+current:active {
+	border-bottom: 3px;
+ 	color: white;
+ }
+
 .eos-logo-color-gradients {
   background-image: linear-gradient(135deg, $header-gradient-initial 0%, $header-gradient-middle 50%, $header-gradient-final 100%);
 }
