--- a/views/shared/layout/footer.pug
+++ b/views/shared/layout/footer.pug
@@ -1,8 +1,8 @@
-footer
+footer.forward-index
   .container
-    | Download from gitlab at 
+    | Download from gitlab at
     a(href='https://gitlab.com/SUSE-UIUX/eos-icons') EOS icons
     | .
-    | Thanks to 
+    | Thanks to
     a(href='https://github.com/sapegin/grunt-webfont') grunt-webfont
     | .
