--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -1,5 +1,5 @@
 // ---- Navbar ----------------------------------------------------------------------------------
-nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top
+nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-index
   .navbar-brand(href='#')
     img.d-inline-block.align-top.mt-lg-2(src='assets/images/landing/logo.png', width='86', height='35', alt='')
   a.navbar-brand(href='#') EOS Icons
@@ -8,10 +8,10 @@ nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.text-white.ml-auto
       li.nav-item
-        a.nav-link.current(href='landing.html') Home
+        a.nav-link.active(href='landing.html') Home
       li.nav-item
-        a.nav-link.current(href='index.html') Cheatsheet
+        a.nav-link(href='index.html') Cheatsheet
       li.nav-item
-        a.nav-link.current(href='icons-picker.html') Customize it
+        a.nav-link(href='icons-picker.html') Customize it
       li.nav-item
-        a.nav-link.current(href='/') Features
+        a.nav-link(href='/') Features
