--- a/views/pages/landing.pug
+++ b/views/pages/landing.pug
@@ -1,42 +1,42 @@
 extends ../layouts/default
 
 block content
-  // header ----------------------------------------------------------------------------------------
-  .header.mb-lg-2
-    .content.container.text-white.img-fluid(alt='img-responsive')
-      h2
-        | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
-  // Open source DNA -------------------------------------------------------------------------------
-  .container.text-centre
-    .row.mx-auto
-      h1.display-4.d-inline-block.pr-lg-5.pt-lg-5.pb-lg-5.pl-lg-5
-        | OPEN
-        br
-        | SOURCE
-        br
-        | DNA
-      .fixed-rectangle-inverse.rounded.mt-lg-5.ml-lg-5.mr-lg-5
-      .col.py-3.px-lg-5.pt-lg-5
-        h4
-          | EOS icons offers an easily customizable icons for any
+    // header ----------------------------------------------------------------------------------------
+    .header.mb-lg-2
+      .content.container.text-white.img-fluid(alt='img-responsive')
+        h2
+          | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
+    // Open source DNA -------------------------------------------------------------------------------
+    .container.text-centre
+      .row.mx-auto
+        h1.display-4.d-inline-block.pr-lg-5.pt-lg-5.pb-lg-5.pl-lg-5
+          | OPEN
           br
-          |         company or project to use. We created guides that are
+          | SOURCE
           br
-          |         adjutable and applicable in any open source project.
-          br
-          |         We appreciate your contribution to EOS icons and look
-          br
-          |         forward to hearing more about how it helps your
-          br
-          |         products and projects
-        button.btn.btn-dark.btn-lg.ml-lg-5.mt-lg-1(type='button') Contribute to EOS Icons
-  // Lot of icons to choose from -------------------------------------------------------------------
-  .jumbotron.jumbotron-fluid.mb-lg-0.bg-jumbotron.pb-lg-0
-    .container
-      h1.text-center.pb-lg-5.display-4 Lot of Icons to choose from
-      img.d-inline-block.pb-lg-5.img-fluid(src='assets/images/landing/icons.png', alt='img-responsive')
+          | DNA
+        .fixed-rectangle-inverse.rounded.mt-lg-5.ml-lg-5.mr-lg-5
+        .col.py-3.px-lg-5.pt-lg-5
+          h4
+            | EOS icons offers an easily customizable icons for any
+            br
+            |         company or project to use. We created guides that are
+            br
+            |         adjutable and applicable in any open source project.
+            br
+            |         We appreciate your contribution to EOS icons and look
+            br
+            |         forward to hearing more about how it helps your
+            br
+            |         products and projects
+          button.btn.btn-dark.btn-lg.ml-lg-5.mt-lg-1(type='button') Contribute to EOS Icons
+    // Lot of icons to choose from -------------------------------------------------------------------
+    .jumbotron.jumbotron-fluid.mb-lg-0.bg-jumbotron.pb-lg-0
+      .container
+        h1.text-center.pb-lg-5.display-4 Lot of Icons to choose from
+        img.d-inline-block.pb-lg-5.img-fluid(src='assets/images/landing/icons.png', alt='img-responsive')
     // CSS animated Icons ----------------------------------------------------------------------------
-    .text-center
+    .text-center.bg-jumbotron
       h1.text-center.pb-lg-5.pt-lg-5.display-4 CSS Animated Icons
       .card-block.pt-lg-5
         .position-relative.d-inline-block
@@ -67,7 +67,7 @@ block content
           br
           |         Javascript would.
     // A pixel perfect design process -----------------------------------------------------------------
-    .text-center
+    .text-center.bg-jumbotron
       h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel perfect design process
       .text-block.text-left.d-inline-block.position-absolute.mt-lg-5.pt-lg-5.pl-lg-4
         h5
@@ -100,98 +100,109 @@ block content
           |         foundations that address design from both a broad
           br
           |         and detailed perspective.
-        button.btn.btn-dark.btn-lg.d-flex.mx-auto.mt-lg-4.mb-lg-3.mb-sm-3(type='button') Check out Extended EOS Icons
+        button.btn.btn-dark.btn-lg.d-flex.mx-auto.mt-lg-4.mb-3(type='button') Check out Extended EOS Icons
     // Cheatsheet and new icons request ---------------------------------------------------------------
-    .card-group
-      .card.bg-cheatsheet
-        .card-body.bottom-group
-          .d-inline-block.align-top.pt-lg-5.pr-lg-3
-            img.d-inline.pl-lg-5(src='assets/images/landing/rocket1.png', alt='img-responsive')
-          .fixed-rectangle.rounded.d-inline-block
-          .d-inline-block.align-top.mx-auto.pt-lg-5
-            h4.text-white.pl-lg-5
+    .container-fluid
+      .row
+        .col-lg-6.bg-cheatsheet
+          .d-inline-block.align-top.pt-5.pr-3
+            img.d-inline.responsive-image(src='assets/images/landing/rocket1.png', alt='img-responsive')
+          .fixed-rectangle.rounded.d-inline-block.mt-3.mb-3
+          .d-inline-block.align-top.mx-auto.pt-5
+            h4.text-white.pl-5.responsive-text
               | Do you already know how to put these icons
               br
               |                better into practice. We might have some
               br
               |                advices for you.
-            button.btn.btn-outline-light.btn-lg.ml-lg-5.mt-lg-1(type='button') Check out Cheatsheet
-      .card.bg-request
-        .card-body.bottom-group
-          .d-inline-block.align-top.pt-lg-5.pr-lg-3
-            img.d-inline.pl-lg-5(src='assets/images/landing/rocket2.png', alt='img-responsive')
-          .fixed-rectangle.rounded.d-inline-block
-          .d-inline-block.align-top.mx-auto.pt-lg-5
-            h4.text-white.pl-lg-5
+            button.btn.btn-outline-light.btn-lg.ml-5.mt-1.mb-1.responsive-text(type='button') Check out Cheatsheet
+        .col-lg-6.bg-request
+          .d-inline-block.align-top.pt-5.pr-3
+            img.d-inline.responsive-image(src='assets/images/landing/rocket2.png', alt='img-responsive')
+          .fixed-rectangle.rounded.d-inline-block.mt-3
+          .d-inline-block.align-top.mx-auto.pt-5
+            h4.text-white.pl-5.responsive-text
               | Are you working on an open source project and
               br
               |                need some icons? We can design them for you
               br
               |                and include them in EOS icons.
-            button.btn.btn-outline-light.btn-lg.ml-lg-5.mt-lg-1(type='button') Request new icons
+            button.btn.btn-outline-light.btn-lg.ml-5.mt-1.responsive-text(type='button') Request new icons
     // Checkout EOS DS --------------------------------------------------------------------------------
-    .container-fluid.top-gradient.text-white.text-center.bottom-container
-      .d-inline-block.text-left.ml-lg-5.pl-lg-5.mt-sm-4
-        h1 Try EOS Icons with EOS DS
-        h4 We are a part of EOS Design system and together we work like a charm
-      .d-inline-block.text-center
-        button.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5.mt-sm-3(type='button') Check out EOS DS
-      .col.d-inline.ml-lg-5
+    .container-fluid.top-gradient.text-white.plane-container
+      .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
+        h1 Try EOS Icons with EOS Design System
+        h4.responsive-text We are a part of EOS Design system and together we work like a charm
+      .d-inline-block.text-center.plane-index
+        button.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5.mt-sm-3.responsive-text(type='button') Check out EOS DS
+      .d-inline-block.ml-5
         img.d-inline-block.plane-img(src='assets/images/landing/plane.png', alt='img-responsive')
     // Contributors section ---------------------------------------------------------------------------
-    .jumbotron.jumbotron-fluid.bg-jumbotron.mb-lg-0.pt-lg-5
-      h3.mb-lg-5.ml-lg-5 Special thanks to all the superheroes that made it happen :
-      .container.text-center
-        span.d-inline-block(href='https://twitter.com/cyntss', title='Cynthia Sanchez on twitter', target='_blank')
+    .jumbotron.jumbotron-fluid.bg-jumbotron.mb-0.pt-5.pb-2
+      h3.mb-5.ml-5 Special thanks to all the superheroes that made it happen :
+      .container-fluid.text-center
+        a.d-inline-block(title='Cynthia Sanchez on twitter', href='https://twitter.com/cyntss', target='_blank')
           img(src='assets/images/landing/image1.png', alt='img-responsive')
-          p Cynthia Sanchez
-        span.d-inline-block.pl-lg-5(href='https://twitter.com/en3sis', title='Sorin Curescu on twitter', target='_blank')
+          p.text-decoration-none.text-dark Cynthia Sanchez
+        a.d-inline-block.pl-5(title='Sorin Curescu on twitter', href='https://twitter.com/en3sis', target='_blank')
           img(src='assets/images/landing/image2.png', alt='img-responsive')
-          p.ml-lg-3 Sorin Curescu
-        span.d-inline-block.pl-lg-5(href='https://twitter.com/manuelecarlini', title='Manuele Carlini on twitter', target='_blank')
+          p.text-decoration-none.text-dark.ml-3 Sorin Curescu
+        a.d-inline-block.pl-5(title='Manuele Carlini on twitter', href='https://twitter.com/manuelecarlini', target='_blank')
           img(src='assets/images/landing/image3.png', alt='img-responsive')
-          p.ml-lg-3 Manuele Carlini
-        span.d-inline-block.pl-lg-5(href='https://twitter.com/hesusjerman', title='hesus jerman on twitter', target='_blank')
+          p.text-decoration-none.text-dark.ml-3 Manuele Carlini
+        a.d-inline-block.pl-5(title='hesus jerman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
           img(src='assets/images/landing/image4.png', alt='img-responsive')
-          p.ml-lg-3 Hesus jerman
+          p.text-decoration-none.text-dark.ml-3 Hesus jerman
+        a.d-inline-block.pl-5(title='Abhinandan Sharma on twitter', href='https://twitter.com/abhinandan0659', target='_blank')
+          img(src='assets/images/landing/image5.png', alt='img-responsive')
+          p.text-decoration-none.text-dark.ml-3 Abhinandan Sharma
+        a.d-inline-block.pl-5(title='Richa Bhist on twitter', href='', target='_blank')
+          img(src='assets/images/landing/image6.png', alt='img-responsive')
+          p.text-decoration-none.text-dark.ml-3 Richa Bhist
+        a.d-inline-block.pl-5(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
+          img(src='assets/images/landing/image7.png', alt='img-responsive')
+          p.text-decoration-none.text-dark.ml-3 Kartikay Bhutani
+        a.d-inline-block.pl-5(title='Zvezdana on Linked in', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
+          img(src='assets/images/landing/image8.png', alt='img-responsive')
+          p.text-decoration-none.text-dark.ml-3 Zvezdana
     // Footer section ---------------------------------------------------------------------------------
-  section#js-contact.bottom-links.text-center.text-white
-    article.container-fluid.footer
-      h3
-        | GET IN TOUCH WITH US
-      .bottom-links-items.row
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/feedback_icon.svg')
-            | Feedback
-          p
-            | Got some ideas or something nice to say to us?
-          a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com')
-            | Send us feedback
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/forum.svg')
-            | Mailing list
-          p
-            | Join our mailing list to receive more information.
-          a.btn.btn-outline-light(href='https://groups.google.com/forum/#!forum/eos-design-system', target='_blank')
-            | Subscribe
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/gitlab-min.svg')
-            | Repository
-          p
-            | Do you want to fork EOS-Icons, contribute, or report an issue?
-          .btn-group-footer
-            a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing', target='_blank')
+    section#js-contact.bottom-links.text-center.text-white
+      article.container-fluid.footer
+        h3
+          | GET IN TOUCH WITH US
+        .bottom-links-items.row
+          .col-sm-6.col-lg-3
+            h4
+              img.bottom-links-icon(src='./assets/images/landing/feedback_icon.svg')
+              | Feedback
+            p
+              | Got some ideas or something nice to say to us?
+            a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com')
+              | Send us feedback
+          .col-sm-6.col-lg-3
+            h4
+              img.bottom-links-icon(src='./assets/images/landing/forum.svg')
+              | Mailing list
+            p
+              | Join our mailing list to receive more information.
+            a.btn.btn-outline-light(href='https://groups.google.com/forum/#!forum/eos-design-system', target='_blank')
+              | Subscribe
+          .col-sm-6.col-lg-3
+            h4
+              img.bottom-links-icon(src='./assets/images/landing/gitlab-min.svg')
               | Repository
-            a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing/issues', target='_blank')
-              | Issues
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/twitter.svg')
-            | Twitter
-          p
-            | Get the latest news, meet the team, and more.
-          a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
-            | EOS in Twitter
+            p
+              | Do you want to fork EOS-Icons, contribute, or report an issue?
+            .btn-group-footer
+              a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing', target='_blank')
+                | Repository
+              a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing/issues', target='_blank')
+                | Issues
+          .col-sm-6.col-lg-3
+            h4
+              img.bottom-links-icon(src='./assets/images/landing/twitter.svg')
+              | Twitter
+            p
+              | Get the latest news, meet the team, and more.
+            a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
+              | EOS in Twitter
