removed linting errors

--- a/assets/stylesheets/landing-page/base/variables/titles.scss
+++ b/assets/stylesheets/landing-page/base/variables/titles.scss
@@ -3,3 +3,6 @@ $h1-font-size: 32px;
 $h1-font-color: $light-color;
 $h2-small-font-size: 0.5em;
 $h4-font-size: 1.3em;
+$h4-font-size-small: 1.0em;
+$h4-font-size-mid: 1.1em;
+$h4-font-size-large: 1.2em;
