--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -7,8 +7,8 @@ block content
       a.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  here.
     .extended-version-wrap
       input.searchbar(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
-    .icons-picker-icons-container.js-icons-list
-      .icons-item.icons-item-static-icons.js-icons-item(onclick='addSelection(this)', data-name='action_chains')
+    .icons-picker-icons-container.js-extended-icons-list
+      .icons-item.icons-item-static-icons.js-extended-icons-item(onclick='addSelection(this)', data-name='action_chains')
         i.eos-icons.js-eos-icons
         br
         .js-eos-icon-name
