--- a/views/pages/thankyou-page.pug
+++ b/views/pages/thankyou-page.pug
@@ -3,6 +3,6 @@ extends ../layouts/default
 block content
   .container.icons-container.thankyou-page-container
     h2 Thank you for using EOS!
-    img(src='assets/images/eos-bunny.png', alt='EOS Bunny')
-    p Download your font here
+    img.js-thankyou-img(src='assets/images/eos-bunny.png', alt='EOS Bunny', onload='autoDownloadFont()')
+    p.js-download-timer 
     button.btn.btn-outline-secondary(type='submit', onclick='downloadFont()') EOS-custom-font.zip
