added tabs functionality on cheatsheet

--- a/assets/stylesheets/landing-page/components/bottom-container.scss
+++ b/assets/stylesheets/landing-page/components/bottom-container.scss
@@ -3,8 +3,9 @@
 .bottom-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
-  padding-bottom: 10px;
+  height: 80px;
+  padding-bottom: 5px;
+  padding-top: 20px;
 
   p {
     display: inline-block;
